<resources>
    <string name="app_name">Sugar Coated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="files">Files</string>
    <string name="log_book">Log Book</string>
    <string name="home">Home</string>
    <string name="supplies">Supplies</string>
    <string name="settings">Settings</string>

    <!--Error Strings-->
    <string name="email_validation">Invalid email</string>
    <string name="name_validation">Please enter your name</string>
    <string name="password_validation">Password must be at least 6 characters</string>
    <string name="blood_sugar_value_validation">Please enter blood glucose value</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="login_failed">Login failed with %1$s</string>
    <string name="logging_event">Logging event failed with %1$s</string>
    <string name="fetch_today_event">Fetch today\'s event failed with %1$s</string>
    <string name="fetch_supplies_failed">Fetch supplies failed with %1$s</string>
    <string name="new_record_addition_failed">New record addition failed with %1$s</string>
    <string name="file_upload_failed">File upload failed with %1$s</string>
    <string name="save_supplies_saves">Saving supplies failed with %1$s</string>
    <string name="logout_failed">Logout failed with %1$s</string>
    <string name="signup_failed">Sign up failed with %1$s</string>
    <string name="auth_status_check_failed">Auth status check failed with %1$s</string>
    <string name="records_fetching_failed">Failed to fetch records with %1$s</string>
    <string name="files_fetching_failed">Failed to fetch files with %1$s</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="invalid_date_and_time">Can not select a time in the future</string>

    <!--Success Strings-->
    <string name="login_successful">Login Successful</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="signup_successful">Registration Successful, Please login.</string>
    <string name="new_record_added">New Record Added Successfully</string>
    <string name="save_supplies">Supplies Saved Successfully</string>
    <string name="file_upload_successful">File Uploaded Successfully</string>

    <!--UI Strings-->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_instead"> Don\'t have an account?
                                    <u><font color='#FFE79D9D'>Sign up</font></u> here.</string>
    <string name="login_instead"><u><font color='#FFE79D9D'>Login</font></u> instead?</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="set_password">Set password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="following">Following</string>
    <string name="graph_link">Graph link</string>
    <string name="graph_link_description">Paste the web-view link from Tomato app
                                    of the person you want to follow</string>
    <string name="add_new_record">Add New Record</string>
    <string name="you_were_missed">You were missed!</string>
    <string name="blood_sugar_underline">______</string>
    <string name="blood_glucose_value">Blood Glucose Value (mg/dL)</string>
    <string name="fasting">Fasting</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="random">Random</string>
    <string name="bed_time">Bed Time</string>
    <string name="note">Note</string>
    <string name="date_and_time">Date and Time</string>
    <string name="save">SAVE</string>
    <string name="let_s_sign_you_in">Let\'s sign you in.</string>
    <string name="sugar_coated_logo">Sugar coated logo</string>
    <string name="category_icon">Category Icon</string>
    <string name="mg_dl">mg/dL</string>
    <string name="plus_button_for_add_new_record">Plus button for add new record</string>
    <string name="infusion_set_change_n_done">Infusion set change \n done</string>
    <string name="sensor_change_n_logged">Sensor change \n logged</string>
    <string name="infusion_set_n_changed">Infusion set \n changed</string>
    <string name="mark_an_event">Mark an event</string>
    <string name="sensor_n_change">Sensor \n change</string>
    <string name="green_tick">Green Tick</string>
    <string name="sensor_supplies">Sensor supplies</string>
    <string name="infusion_set_supplies">Infusion Set supplies</string>
    <string name="insulin_supplies">Insulin supplies</string>
    <string name="add_supplies">Add supplies</string>
    <string
        name="supplies_remaining">"\u2022 %1$d %2$s remaining. Supply will last for %3$s"
    </string>
    <string name="red">"<font color="#FFA52714">\u2B24 Red</font>"</string>
    <string name="green">"<font color="#FF006064">\u2B24 Green</font>"</string>
    <string name="blue">"<font color="#FF3F51B5">\u2B24 Blue</font>"</string>
    <string name="orange">"<font color="#FFF57F17">\u2B24 Orange</font>"</string>
    <string name="pink">"<font color="#FF880E4F">\u2B24 Pink</font>"</string>
    <string name="brown">"<font color="#FF795548">\u2B24 Brown</font>"</string>
    <string name="upload_description">Button to upload files</string>

</resources>