<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/files_fragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_files"
        android:title="@string/files" />
    <item
        android:id="@+id/log_book_fragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_log_book"
        android:title="@string/log_book" />
    <item
        android:id="@+id/home_fragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/calendar_fragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_calendar"
        android:title="@string/supplies" />
    <item
        android:id="@+id/settings_fragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>