<layout>
  <androidx.constraintlayout.widget.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp">

    <Button
        android:id="@+id/btn_sensor_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_infusion_change"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sensor_n_change"/>

    <Button
        android:id="@+id/btn_infusion_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_sensor_change"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/infusion_set_n_changed"/>

    <ImageView
        android:id="@+id/iv_tick_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:src="@drawable/icon_tick"
        android:contentDescription="@string/green_tick"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintLeft_toLeftOf="@id/btn_sensor_change"
        app:layout_constraintRight_toLeftOf="@id/iv_tick_infusion_set"
        app:layout_constraintTop_toTopOf="@id/btn_sensor_change"
        app:layout_constraintBottom_toBottomOf="@id/btn_sensor_change"/>

    <TextView
        android:id="@+id/tv_sensor_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_margin="2dp"
        android:textAlignment="center"
        android:text="@string/sensor_change_n_logged"
        app:layout_constraintLeft_toLeftOf="@id/iv_tick_sensor"
        app:layout_constraintRight_toRightOf="@id/iv_tick_sensor"
        app:layout_constraintTop_toBottomOf="@id/iv_tick_sensor"/>

    <ImageView
        android:id="@+id/iv_tick_infusion_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:src="@drawable/icon_tick"
        android:contentDescription="@string/green_tick"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintRight_toRightOf="@id/btn_infusion_change"
        app:layout_constraintTop_toTopOf="@id/btn_infusion_change"
        app:layout_constraintLeft_toRightOf="@id/iv_tick_sensor"
        app:layout_constraintBottom_toBottomOf="@id/btn_infusion_change"/>

    <TextView
        android:id="@+id/tv_infusion_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_margin="2dp"
        android:textAlignment="center"
        android:text="@string/infusion_set_change_n_done"
        app:layout_constraintLeft_toLeftOf="@id/iv_tick_infusion_set"
        app:layout_constraintRight_toRightOf="@id/iv_tick_infusion_set"
        app:layout_constraintTop_toBottomOf="@id/iv_tick_infusion_set"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>