<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory app:title="@string/following">

        <EditTextPreference
            app:key="web-view link"
            app:title="@string/graph_link"
            app:summary="@string/graph_link_description"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Color Preferences">

        <ListPreference
            app:key="sensor_color_preference"
            app:title="Sensor Marker"
            app:summary="Select your preferred color"
            app:entries="@array/color_options"
            app:entryValues="@array/color_values"
            android:defaultValue="#FFA52714" />

        <ListPreference
            app:key="infusion_set_color_preference"
            app:title="Infusion Set Marker"
            app:summary="Select your preferred color"
            app:entries="@array/color_options"
            app:entryValues="@array/color_values"
            android:defaultValue="#FF006064" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Target Range">

        <EditTextPreference
            app:key="target_lower_range"
            app:title="Target lower value"
            android:inputType="number"
            android:digits="0123456789"
            app:summary="Enter lower value of your target range"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="70" />

        <EditTextPreference
            app:key="target_upper_range"
            app:title="Target upper value"
            android:inputType="number"
            android:digits="0123456789"
            app:summary="Enter upper value of your target range"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="180"/>

    </PreferenceCategory>

    <Preference
        app:key="logout"
        app:layout="@layout/button_logout"/>

</PreferenceScreen>

