<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

  <TextView
      android:id="@+id/tv_sensor_supplies"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginVertical="8dp"
      android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
      android:text="@string/sensor_supplies"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
      android:id="@+id/et_sensor_supplies"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_sensor_supplies" />

  <TextView
      android:id="@+id/tv_infusion_set_supplies"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginVertical="8dp"
      android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
      android:text="@string/infusion_set_supplies"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/et_sensor_supplies"/>

  <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
      android:id="@+id/et_infusion_set_supplies"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_infusion_set_supplies" />

  <TextView
      android:id="@+id/tv_insulin_supplies"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginVertical="8dp"
      android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
      android:text="@string/insulin_supplies"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/et_infusion_set_supplies"/>

  <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
      android:id="@+id/et_insulin_supplies"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_insulin_supplies" />

  <Button
      android:id="@+id/btn_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      android:layout_margin="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_insulin_supplies" />

</androidx.constraintlayout.widget.ConstraintLayout>
